# corrugated_portal

./: pyproject.toml  setup.py
corrugated_portal/: api.py  hooks.py  modules.json  modules.txt
corrugated_portal/corrugated_portal/doctype/artwork_upload/: artwork_upload.js  artwork_upload.json  artwork_upload.py
corrugated_portal/corrugated_portal/doctype/corrugated_portal_settings/: corrugated_portal_settings.json  corrugated_portal_settings.py
corrugated_portal/corrugated_portal/doctype/portal_settings/: portal_settings.json  portal_settings.py
corrugated_portal/corrugated_portal/doctype/quote_request/: quote_request.js  quote_request.json  quote_request.py
corrugated_portal/templates/includes/: portal_navbar.html
corrugated_portal/templates/pages/: portal_account.html  portal_artwork.html  portal_home.html  portal_orders.html  portal_quote_request.html  portal_tracking.html
corrugated_portal/www/portal/: account.html  account.py  artwork.html  artwork.py  index.html  index.py  orders.html  orders.py  request-quote.html  request-quote.py  track.html  track.py
