[project]
name = "corrugated_portal"
version = "0.1.0"
description = "Customer self-service portal for corrugated packaging orders"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "corrugated_portal"
